--- a/src/style.scss
+++ b/src/style.scss
@@ -54,7 +54,7 @@
 
 .introduction {
   padding: 160px 0;
-  background: url(@/assets/background-img.png) no-repeat center;
+  background: url('/assets/background-img.png') no-repeat center;
   & .container {
     display: flex;
   }
@@ -105,6 +105,9 @@
   }
 }
 
+.about_text {
+  border: 1px solid red;
+}
 //banner 
 
 .banner {
@@ -129,6 +132,7 @@
 .banner_links {
   display: flex;
   align-items: center;
+  border: 1px solid red;
 }
 //project
 
