fex: 調整banner區塊區塊image檔案，修改css

--- a/src/variable.scss
+++ b/src/variable.scss
@@ -6,7 +6,10 @@ $font_black:#000;
 %btn_content {
   padding: 12px 24px;
   border-radius: 32px;
-  border: 0;    
+  border: 0;
+  &:hover {
+    background-color: $title_color;
+  }    
   a {
     margin-right: 4px;
   }
