--- a/src/style.scss
+++ b/src/style.scss
@@ -127,11 +127,18 @@
     color: $font_white;
   }
 }
-
 .banner_links {
   display: flex;
   align-items: center;
+  gap: 20px;
 }
+.banner_item {
+  border-radius: 40px;
+  &:hover {
+    box-shadow: 0 0 16px 3px #9094ff;
+  }
+}
+
 //project
 
 .project {
